--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,48 @@
     transform: rotate(360deg);
   }
 }
+
+/* Custom css */
+
+/* Font */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+
+* {
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+}
+body {
+  background: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container{
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  margin: 0 auto;
+  width: 265px;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  border: 10px solid #101116;
+  background: #101116;
+  border-radius: 5px;
+}
+
+.keypad{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(60px, auto);
+}
+
+input[type="text"] {
+  height: 80px;
+  width: 248px;
+  background: #101116;
+  border: none;
+  outline: none;
+  color: white;
+  text-align: right;
+}
