--- a/src/App.css
+++ b/src/App.css
@@ -80,4 +80,7 @@ input[type="text"] {
   outline: none;
   color: white;
   text-align: right;
+  font-size: 24px;
+  font-weight: 500px;
+  letter-spacing: 1px;
 }
